# kaggleagent

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.github/workflows/: ci.yml
arena/: cli.py
arena/budget/: governor.py  kill_switch.py  policy.py  waste.py
arena/controller/: planner.py  state.py  task_queue.py  watchdog.py  worktree.py
arena/fixture/: evaluator.py  manifest.py
arena/memory/: diff.py  proposal.py  validator.py
arena/observability/: __init__.py  events.py  replay.py  report.py  scrubber.py  trace_store.py  version_baseline.py
arena/providers/: __init__.py  auth.py  base.py  claude.py  codex.py  health.py  parser.py  stub_claude.py  stub_codex.py
arena/research_proxy/: __init__.py  fusion_proposal.py  fusion_scorer.py  method_digest.py  question_generator.py
arena/review/: packet.py
arena/sandbox/: __init__.py  network.py  policy.py  runner.py  secrets.py
arena/schemas/: loader.py  validate.py
arena/scoreboard/: store.py
arena/scoreboard/migrations/: 0001_create_phase0_tables.sql  0002_extend_experiments_for_design_v2.sql
arena/security/: scrubber.py
arena/self_improvement/: champion_challenger.py  freeze.py  proposal.py  scan.py
docs/: RESPONSE_TO_FEEDBACK.md
docs/architecture/: ADR-0001-PHASE0-SCOPE.md  ADR-0002-CONTROLLER-AND-PROVIDERS.md  ADR-0003-SUBSCRIPTION-ONLY-LIMITS.md  ADR-0004-PROVIDER-CLI-INVOCATION.md  KAGGLE_AGENT_ARENA_DESIGN_V2.md
docs/memory/: UNIFIED_MEMORY_WIKI.md
docs/phase0/: PHASE_0_SINGLE_SCOPE_PLAN.md  POLISH_FOLLOWUPS.md
docs/phase0/runbooks/: auth_expiry.md  cli_regression.md  reboot.md
docs/phase1/: PHASE_1_PRIORITIES.md
docs/security/: SECURITY_COST_REPRODUCIBILITY_SPEC.md
docs/superpowers/plans/: 2026-04-30-pr1-the-spine.md  2026-04-30-pr2-the-cap.md  2026-04-30-pr3-the-moat.md  2026-05-02-pr4-the-eyes.md  2026-05-02-pr5-research-fusion-proxy.md  2026-05-03-pr6-reviews-memory-si-freeze.md  2026-05-03-pr7-real-adapters-phase0-close.md
docs/superpowers/specs/: 2026-04-30-phase-0-implementation-dag-design.md  2026-05-02-pr6-reviews-memory-si-freeze-design.md  2026-05-03-pr7-real-adapters-phase0-close-design.md
fixtures/tabular_binary_v1/: competition.yaml  fixture_manifest.yaml  hidden_labels.csv  rules.md  sample_submission.csv  test.csv  train.csv
fixtures/tabular_binary_v1/paper_bundle/: method_note_001.md  method_note_002.md
prompts/: claude_paper_digest_prompt.md.j2  claude_research_fusion_prompt.md.j2  claude_strategy_prompt.md.j2
schemas/: event.schema.json  experiment.schema.json  fusion_proposal.schema.json  memory_update.schema.json  paper_digest.schema.json  provider_result.schema.json  research_node.schema.json  research_question.schema.json  research_review.schema.json  review.schema.json  self_improvement_proposal.schema.json  strategist_recommendation.schema.json  task_packet.schema.json  usage_snapshot.schema.json
scripts/: check_migrations.py  fixture_smoke.py  static_sandbox_policy_check.py  validate_memory_examples.py  validate_prompt_delimiters.py  validate_schemas.py
tests/: conftest.py  test_budget_governor.py  test_budget_kill_switch.py  test_budget_policy.py  test_budget_waste.py  test_cli.py  test_cli_budget.py  test_cli_doctor.py  test_cli_eval_harness.py  test_cli_get_provider.py  test_cli_memory_propose.py  test_cli_provider_health.py  test_cli_replay.py  test_cli_report.py  test_cli_research_proxy.py  test_cli_review.py  test_cli_sandbox.py  test_cli_self_improve_scan.py  test_controller_planner.py  test_controller_state.py  test_controller_task_queue.py  test_controller_watchdog.py  test_controller_watchdog_events.py  test_controller_watchdog_sandbox.py  test_controller_worktree.py  test_fixture.py  test_fixture_edge_cases.py  test_memory_diff.py  test_memory_proposal.py  test_memory_proposal_examples.py  test_memory_validator.py  test_observability_events.py  test_observability_fixture_drift.py  test_observability_provider_drift.py  test_observability_replay.py  test_observability_report.py  test_observability_trace_store.py  test_observability_version_baseline.py  test_observability_waste.py  test_packet_builders_provider_threading.py  (+34 more)
